--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,29 @@
     <string name="viewGoods35">Test</string>
     <string name="viewGoods34">-</string>
     <string name="viewGoods33">-</string>
+    <string name="title_activity_settings">SettingsActivity</string>
+
+    <!-- Preference Titles -->
+    <string name="messages_header">Сообщение</string>
+    <string name="sync_header">Синхр.</string>
+
+    <!-- Messages Preferences -->
+    <string name="signature_title">Your signature</string>
+    <string name="reply_title">Default reply action</string>
+
+    <!-- Sync Preferences -->
+    <string name="sync_title">Sync email periodically</string>
+    <string name="attachment_title">Download incoming attachments</string>
+    <string name="attachment_summary_on">Automatically download attachments for incoming emails
+    </string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <string name="title_activity_login">КАССА авторизация</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Пароль</string>
+    <string name="action_sign_in">Войти или зарегистрироваться</string>
+    <string name="action_sign_in_short">Войти</string>
+    <string name="welcome">"Приветствую !"</string>
+    <string name="invalid_username">Не верное имя пользователя</string>
+    <string name="invalid_password">Пароль должен иметь мин. 5 символов</string>
+    <string name="login_failed">"Вход не выполнен"</string>
 </resources>
