--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,4 +61,8 @@
     <string name="invalid_username">Не верное имя пользователя</string>
     <string name="invalid_password">Пароль должен иметь мин. 5 символов</string>
     <string name="login_failed">"Вход не выполнен"</string>
+    <string name="properties">\"Properties\"</string>
+    <string name="urlServer">urlServer</string>
+    <string name="portServer">portServer</string>
+    <string name="posName">posName</string>
 </resources>
